--- a/CSS Colored Markers/index.html
+++ b/CSS Colored Markers/index.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     <h1>CSS Color Markers</h1>
+    <div class="container">
+      <div class="marker red">
+        <div class="sleeve"></div>
+      </div>
+      <div class="marker green"></div>
+      <div class="marker blue"></div>
+    </div>
   </body>
 </html>
