--- a/HTML Registration Form/index.html
+++ b/HTML Registration Form/index.html
@@ -36,6 +36,7 @@
         <legend>Account type (required)</legend>
         <label for="personal-account"
           ><input
+            class="inline"
             id="personal-account"
             type="radio"
             name="account-type"
