--- a/CSS Rothko Painting/index.html
+++ b/CSS Rothko Painting/index.html
@@ -6,6 +6,12 @@
     <link href="./styles.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="canvas"></div>
+    <div class="frame">
+      <div class="canvas">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+      </div>
+    </div>
   </body>
 </html>
