--- a/CSS Photo Gallery/index.html
+++ b/CSS Photo Gallery/index.html
@@ -4,7 +4,49 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photo Gallery</title>
-    <link href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1>css flexbox photo gallery</h1>
+    </header>
+    <div class="gallery">
+      <img
+        src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg"
+        alt="mimish"
+      />
+      <img
+        src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg"
+        alt="tahoma"
+      />
+      <img
+        src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg"
+        alt="gilberto"
+      />
+      <img
+        src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg"
+        alt="haily"
+      />
+      <img
+        src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg"
+        alt="wolfes"
+      />
+      <img
+        src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg"
+        alt="shellos"
+      />
+      <img
+        src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg"
+        alt="snaky"
+      />
+      <img
+        src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg"
+        alt="cotto"
+      />
+      <img
+        src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg"
+        alt="fifties"
+      />
+    </div>
+  </body>
 </html>
