--- a/CSS Nutrition Label/index.html
+++ b/CSS Nutrition Label/index.html
@@ -26,6 +26,10 @@
         </div>
         <span>230</span>
       </div>
+      <div class="divider medium"></div>
+      <div class="daily-value small-text">
+        <p class="bold right">% Daily Value *</p>
+      </div>
     </div>
   </body>
 </html>
