--- a/CSS Nutrition Label/index.html
+++ b/CSS Nutrition Label/index.html
@@ -38,6 +38,22 @@
           Saturated Fat 1g <span class="bold">5%</span>
         </p>
         <div class="divider"></div>
+        <p class="indent no-divider">
+          <span><i>Trans</i> Fat 0g</span>
+        </p>
+        <div class="divider"></div>
+        <p>
+          <span><span class="bold">Cholesterol</span> 0mg</span>
+          <span class="bold">0%</span>
+        </p>
+        <p>
+          <span><span class="bold">Sodium</span> 160mg</span>
+          <span class="bold">7%</span>
+        </p>
+        <p>
+          <span><span class="bold">Total Carbohydrate</span> 37g</span>
+          <span class="bold">13%</span>
+        </p>
       </div>
     </div>
   </body>
