--- a/CSS Nutrition Label/index.html
+++ b/CSS Nutrition Label/index.html
@@ -54,6 +54,14 @@
           <span><span class="bold">Total Carbohydrate</span> 37g</span>
           <span class="bold">13%</span>
         </p>
+        <p class="indent no-divider">Dietary Fiber 4g</p>
+        <div class="divider"></div>
+        <p class="indent no-divider">Total Sugars 12g</p>
+        <div class="divider double-indent"></div>
+        <p class="double-indent no-divider">
+          Includes 10g Added Sugars <span class="bold">20%</span>
+        </p>
+        <div class="divider"></div>
       </div>
     </div>
   </body>
