--- a/ACCESSIBILITY Quiz/index.html
+++ b/ACCESSIBILITY Quiz/index.html
@@ -7,8 +7,18 @@
       name="description"
       content="freeCodeCamp Accessibility Quiz practice project"
     />
+    <title>Accessibility Quiz</title>
     <link rel="stylesheet" href="styles.css" />
-    <title>Accessiblity Quiz</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img
+        id="logo"
+        src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
+      />
+      <h1>HTML/CSS Quiz</h1>
+      <nav></nav>
+    </header>
+    <main></main>
+  </body>
 </html>
