--- a/ACCESSIBILITY Quiz/index.html
+++ b/ACCESSIBILITY Quiz/index.html
@@ -19,9 +19,9 @@
       <h1>HTML/CSS Quiz</h1>
       <nav>
         <ul>
-          <li><a>INFO</a></li>
-          <li><a>HTML</a></li>
-          <li><a>CSS</a></li>
+          <li><a href="#student-info">INFO</a></li>
+          <li><a href="#html-questions">HTML</a></li>
+          <li><a href="#css-questions">CSS</a></li>
         </ul>
       </nav>
     </header>
@@ -31,13 +31,25 @@
         action="https://freecodecamp.org/practice-project/accessibility-quiz"
       >
         <section role="region" aria-labelledby="student-info">
-          <h2 id="student-info">Who are you?</h2>
+          <h2 id="student-info">Student Info</h2>
+          <div class="info">
+            <label for="student-name">Name:</label>
+            <input id="student-name" />
+          </div>
+          <div class="info">
+            <label for="student-email">Email:</label>
+            <input id="student-email" />
+          </div>
+          <div class="info">
+            <label for="birth-date">D.O.B.:</label>
+            <input id="birth-date" />
+          </div>
         </section>
         <section role="region" aria-labelledby="html-questions">
-          <h2 id="html-questions">What is HTML</h2>
+          <h2 id="html-questions">HTML</h2>
         </section>
         <section role="region" aria-labelledby="css-questions">
-          <h2 id="css-questions">What is CSS?</h2>
+          <h2 id="css-questions">CSS</h2>
         </section>
       </form>
     </main>
