--- a/ACCESSIBILITY Quiz/index.html
+++ b/ACCESSIBILITY Quiz/index.html
@@ -34,15 +34,17 @@
           <h2 id="student-info">Student Info</h2>
           <div class="info">
             <label for="student-name">Name:</label>
-            <input id="student-name" />
+            <input type="text" name="student-name" id="student-name" />
           </div>
           <div class="info">
             <label for="student-email">Email:</label>
-            <input id="student-email" />
+            <input type="email" name="student-email" id="student-email" />
           </div>
           <div class="info">
-            <label for="birth-date">D.O.B.:</label>
-            <input id="birth-date" />
+            <label for="birth-date"
+              >D.O.B.<span class="sr-only">(Date of Birth)</span></label
+            >
+            <input type="date" name="birth-date" id="birth-date" />
           </div>
         </section>
         <section role="region" aria-labelledby="html-questions">
