--- a/ACCESSIBILITY Quiz/index.html
+++ b/ACCESSIBILITY Quiz/index.html
@@ -49,6 +49,48 @@
         </section>
         <section role="region" aria-labelledby="html-questions">
           <h2 id="html-questions">HTML</h2>
+          <div class="question-block">
+            <p>1</p>
+            <fieldset class="question" name="html-question-one">
+              <legend>
+                The legend element represents a caption for the content of its
+                parent fieldset element
+              </legend>
+              <ul class="answers-list">
+                <li>
+                  <label>
+                    <input id="q1-a1" type="radio" />
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input id="q1-a2" type="radio" />
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
+          <div class="question-block">
+            <p>2</p>
+            <fieldset class="question" name="html-question-two">
+              <legend>
+                A label element nesting an input element is required to have a
+                for attribute with the same value as the input's id
+              </legend>
+              <ul class="answers-list">
+                <li>
+                  <label>
+                    <input id="q2-a1" type="radio" />
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input id="q2-a2" type="radio" />
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
         </section>
         <section role="region" aria-labelledby="css-questions">
           <h2 id="css-questions">CSS</h2>
