--- a/ACCESSIBILITY Quiz/index.html
+++ b/ACCESSIBILITY Quiz/index.html
@@ -14,6 +14,7 @@
     <header>
       <img
         id="logo"
+        alt="freeCodeCamp"
         src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg"
       />
       <h1>HTML/CSS Quiz</h1>
@@ -58,13 +59,15 @@
               </legend>
               <ul class="answers-list">
                 <li>
-                  <label>
-                    <input id="q1-a1" type="radio" />
+                  <label for="q1-a1">
+                    <input type="radio" id="q1-a1" name="q1" value="true" />
+                    True
                   </label>
                 </li>
                 <li>
-                  <label>
-                    <input id="q1-a2" type="radio" />
+                  <label for="q1-a2">
+                    <input type="radio" id="q1-a2" name="q1" value="false" />
+                    False
                   </label>
                 </li>
               </ul>
@@ -79,13 +82,15 @@
               </legend>
               <ul class="answers-list">
                 <li>
-                  <label>
-                    <input id="q2-a1" type="radio" />
+                  <label for="q2-a1">
+                    <input type="radio" id="q2-a1" name="q2" value="true" />
+                    True
                   </label>
                 </li>
                 <li>
-                  <label>
-                    <input id="q2-a2" type="radio" />
+                  <label for="q2-a2">
+                    <input type="radio" id="q2-a2" name="q2" value="false" />
+                    False
                   </label>
                 </li>
               </ul>
@@ -94,6 +99,12 @@
         </section>
         <section role="region" aria-labelledby="css-questions">
           <h2 id="css-questions">CSS</h2>
+          <div class="formrow">
+            <div class="question-block"></div>
+            <div class="answer"></div>
+            <div class="question-block"></div>
+            <div class="answer"></div>
+          </div>
         </section>
       </form>
     </main>
