--- a/ACCESSIBILITY Quiz/index.html
+++ b/ACCESSIBILITY Quiz/index.html
@@ -126,7 +126,16 @@
             </div>
           </div>
         </section>
+        <button type="submit">Send</button>
       </form>
     </main>
+    <footer>
+      <address>
+        <a href="https://freecodecamp.org">freeCodeCamp</a><br />
+        San Francisco<br />
+        California<br />
+        USA
+      </address>
+    </footer>
   </body>
 </html>
