--- a/CSS Balance Sheet/index.html
+++ b/CSS Balance Sheet/index.html
@@ -15,7 +15,29 @@
             <span>Balance Sheet</span>
           </span>
         </h1>
-        <div id="years" aria-hidden="true"></div>
+        <div id="years" aria-hidden="true">
+          <span class="year">2019</span>
+          <span class="year">2020</span>
+          <span class="year">2021</span>
+        </div>
+        <div class="table-wrap">
+          <table>
+            <caption>
+              Assets
+            </caption>
+            <thead>
+              <tr>
+                <td></td>
+                <th></th>
+                <th></th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+          <table></table>
+          <table></table>
+        </div>
       </section>
     </main>
   </body>
