--- a/CSS Balance Sheet/index.html
+++ b/CSS Balance Sheet/index.html
@@ -67,10 +67,33 @@
                 <td>$650</td>
                 <td class="current">$728</td>
               </tr>
+              <tr class="total">
+                <th>Total <span class="sr-only">Assets</span></th>
+                <td>$579</td>
+                <td>$736</td>
+                <td class="current">$809</td>
+              </tr>
+            </tbody>
+          </table>
+          <table>
+            <caption>
+              Liabilities
+            </caption>
+            <thead>
+              <tr>
+                <td></td>
+                <th><span class="sr-only">2019</span></th>
+                <th><span class="sr-only">2020</span></th>
+                <th><span class="sr-only">2021</span></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="data"></tr>
+              <tr class="data"></tr>
+              <tr class="data"></tr>
               <tr class="total"></tr>
             </tbody>
           </table>
-          <table></table>
           <table></table>
         </div>
       </section>
