--- a/CSS Cat Painting/index.html
+++ b/CSS Cat Painting/index.html
@@ -7,8 +7,12 @@
   </head>
   <body>
     <main>
-      <div class="cat-head"></div>
-      <div class="box"></div>
+      <div class="cat-head">
+        <div class="cat-ears">
+          <div class="cat-left-ear"></div>
+          <div class="cat-right-ear"></div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
