--- a/CSS Cat Painting/index.html
+++ b/CSS Cat Painting/index.html
@@ -18,8 +18,12 @@
         </div>
 
         <div class="cat-eyes">
-          <div class="cat-left-eye"></div>
-          <div class="cat-right-eye"></div>
+          <div class="cat-left-eye">
+            <div class="cat-left-inner-eye"></div>
+          </div>
+          <div class="cat-right-eye">
+            <div class="cat-right-inner-eye"></div>
+          </div>
         </div>
       </div>
     </main>
