--- a/CSS Cat Painting/index.html
+++ b/CSS Cat Painting/index.html
@@ -27,6 +27,11 @@
         </div>
 
         <div class="cat-nose"></div>
+
+        <div class="cat-mouth">
+          <div class="cat-mouth-line-left"></div>
+          <div class="cat-mouth-line-right"></div>
+        </div>
       </div>
     </main>
   </body>
