--- a/CSS Cat Painting/index.html
+++ b/CSS Cat Painting/index.html
@@ -32,6 +32,8 @@
           <div class="cat-mouth-line-left"></div>
           <div class="cat-mouth-line-right"></div>
         </div>
+
+        <div class="cat-whiskers"></div>
       </div>
     </main>
   </body>
