--- a/Technical Documentation Page/index.html
+++ b/Technical Documentation Page/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <main id="main-doc">
+      <nav id="navbar">
+        <header>Full-Stack Web Developpement</header>
+        <a class="nav-link" href="#JavaScript">JavaScript</a>
+        <a class="nav-link" href="#MERN_Stack">MERN Stack</a>
+        <a class="nav-link" href="#MongoDb">MongoDb</a>
+        <a class="nav-link" href="#ExpressJs">ExpressJs</a>
+        <a class="nav-link" href="#ReactJs">ReactJs</a>
+        <a class="nav-link" href="#NodeJs">NodeJs</a>
+      </nav>
       <section class="main-section" id="JavaScript">
         <header>Javascript</header>
         <p>
@@ -49,7 +58,7 @@
           changeText);
         </code>
       </section>
-      <section class="main-section" id="MERN Stack">
+      <section class="main-section" id="MERN_Stack">
         <header>MERN Stack</header>
         <p>
           The MERN stack is a popular technology stack used for building
