--- a/CSS City Skyline/index.html
+++ b/CSS City Skyline/index.html
@@ -6,5 +6,9 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
 
-  <body></body>
+  <body>
+    <div class="background-buildings">
+      <div class="bb1"></div>
+    </div>
+  </body>
 </html>
