--- a/Product Landing Page/index.html
+++ b/Product Landing Page/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
     <title>Product Landing Page</title>
-    <meta name="content" width="max-width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <meta name='content' width='max-width=device-width, initial-scale=1.0'/>
+    <meta charset='UTF-8'/>
+    <link rel='stylesheet' href='.styles.css'/>
   </head>
-  <body></body>
+  <body>
+    <header id='header'>
+      <img id='header-img' src='https://yt3.googleusercontent.com/ytc/AIdro_nbzDCJa9dvGr1phXLHNvdO56p4F2R2SA4qyTAziXiyJ-4=s900-c-k-c0x00ffffff-no-rj' alt='logo' width='50' height='50'/>
+    <nav id='nav-bar'>
+        <li class='nav-link'><a href='#features'>a</a></li>
+        <li class='nav-link'><a href='#rca'>b</a></li>
+        <li class='nav-link'><a href='#palmares'>c</a></li>
+    </nav>
+    <section id='features'>
+      <form id='form' method='post' action='https://www.freecodecamp.com/email-submit'>
+        <label>Full Name <input id='full-name' placeholder='Enter your name' type='text'/></label>
+        <label>Email <input id='email' placeholder='Enter your email' type='email' required/></label>
+        <input id='submit' type='submit'/>
+      </form>
+    </section>
+    <section id='rca'>
+      <iframe id='video' src='https://youtu.be/JanaHIv29xc?si=_uXRnZ6jWDiRwOMY'
+      ></iframe>
+    </section>
+    <dection id='palmares'></section>
+    </header>
+  </body>
 </html>
