--- a/Product Landing Page/index.html
+++ b/Product Landing Page/index.html
@@ -1,32 +1,54 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
   <head>
     <title>Product Landing Page</title>
-    <meta name='content' width='max-width=device-width, initial-scale=1.0'/>
-    <meta charset='UTF-8'/>
-    <link rel='stylesheet' href='.styles.css'/>
+    <meta name="content" width="max-width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header id='header'>
-      <img id='header-img' src='https://yt3.googleusercontent.com/ytc/AIdro_nbzDCJa9dvGr1phXLHNvdO56p4F2R2SA4qyTAziXiyJ-4=s900-c-k-c0x00ffffff-no-rj' alt='logo' width='50' height='50'/>
-    <nav id='nav-bar'>
-        <li class='nav-link'><a href='#squad'>Our Team</a></li>
-        <li class='nav-link'><a href='#rca'>RCA</a></li>
-        <li class='nav-link'><a href='#honours'>Honours</a></li>
-    </nav>
-    <section id='squad'>
+    <header id="header">
+      <img
+        id="header-img"
+        src="https://yt3.googleusercontent.com/ytc/AIdro_nbzDCJa9dvGr1phXLHNvdO56p4F2R2SA4qyTAziXiyJ-4=s900-c-k-c0x00ffffff-no-rj"
+        alt="logo"
+      />
+      <nav id="nav-bar">
+        <li><a href="#squad" class="nav-link">Our Team</a></li>
+        <li><a href="#rca" class="nav-link">RCA</a></li>
+        <li><a href="#honours" class="nav-link">Honours</a></li>
+      </nav>
+    </header>
+    <section id="squad">
       <h1>Reserve your RajaWe card</h1>
-      <form id='form' method='post' action='https://www.freecodecamp.com/email-submit'>
-        <label>Full Name <input id='full-name' placeholder='Enter your name' type='text'/></label>
-        <label>Email <input id='email' placeholder='Enter your email' type='email' required/></label>
-        <input id='submit' type='submit'/>
+      <form
+        id="form"
+        method="post"
+        action="https://www.freecodecamp.com/email-submit"
+      >
+        <label
+          >Full Name
+          <input id="full-name" placeholder="Enter your name" type="text"
+        /></label>
+        <label
+          >Email
+          <input
+            id="email"
+            name="email"
+            placeholder="Enter your email"
+            type="email"
+            required
+        /></label>
+        <input id="submit" type="submit" />
       </form>
       <table>
-        <caption>Squad List (2023/2024)</caption>
+        <caption>
+          Squad List (2023/2024)
+        </caption>
         <thead>
           <tr>
-          <th>Position</th>
-          <th>Name</th>
+            <th>Position</th>
+            <th>Name</th>
           </tr>
         </thead>
         <tbody>
@@ -36,61 +58,97 @@
           </tr>
           <tr>
             <th>GK</th>
-            <td>Anas Zniti</td>
-            <td>Mohamed Baayou</td>
-            <td>Yassine Zoubir</td>
+            <td>Anas Zniti | Mohamed Baayou | Yassine Zoubir</td>
           </tr>
           <tr>
             <th>DF</th>
-            <td>Ismael Mokadem</td>
-            <td>Abdellah Khafifi</td>
-            <td>Youssef Belammari</td>
-            <td>Mohamed Boulacsoute</td>
-            <td>Bouchaib Arrassi</td>
-            <td>Zakaria Labib</td>
+            <td>
+              Ismael Mokadem | Abdellah Khafifi | Youssef Belammari | Mohamed
+              Boulacsoute | Bouchaib Arrassi | Zakaria Labib
+            </td>
           </tr>
           <tr>
             <th>MD</th>
-            <td>Mohamed Zrida</td>
-            <td>Mohamed Al Makahasi</td>
-            <td>El Mehdi El Moubarik</td>
-            <td>Sabir Bougrine</td>
-            <td>Ahmadou Camara</td>
-            <td>Hervé Guy</td>
-            <td>Haashim Domingo</td>
+            <td>
+              Mohamed Zrida | Mohamed Al Makahasi | El Mehdi El Moubarik | Sabir
+              Bougrine | Ahmadou Camara | Hervé Guy | Haashim Domingo
+            </td>
           </tr>
           <tr>
             <th>FW</th>
-            <td>El Mehdi Maouhoub</td>
-            <td>Nawfel Zerhouni</td>
-            <td>Adam Ennafati</td>
-            <td>Yousri Bouzok</td>
-            <td>Riad Benayad</td>
-            <td>Víctor Ábrego</td>
-            <td>Marouane Zila</td>
+            <td>
+              El Mehdi Maouhoub | Nawfel Zerhouni | Adam Ennafati | Yousri
+              Bouzok | Riad Benayad | Víctor Ábrego | Marouane Zila
+            </td>
           </tr>
         </tbody>
       </table>
     </section>
-    <section id='rca'>
+    <section id="rca">
       <h3>Whats meant to be RajaOui?</h3>
-      <iframe id='video' src='https://www.youtube.com/embed/JanaHIv29xc?si=_uXRnZ6jWDiRwOMY' frameborder='0' allowfullscreen
+      <iframe
+        id="video"
+        src="https://www.youtube.com/embed/JanaHIv29xc?si=_uXRnZ6jWDiRwOMY"
+        frameborder="0"
+        allowfullscreen
       ></iframe>
     </section>
-    <dection id='honours'>
+    <section id="honours">
       <h2>Club Titles</h2>
       <ul>
-        <li><a href='https://en.wikipedia.org/wiki/Botola'>Botola</a> - <span>13 Times</span></li>
-        <li><a href='https://en.wikipedia.org/wiki/Moroccan_Throne_Cup'>Moroccan Throne Cup</a> - <span>8 Times</span></li>
-        <li><a href='https://en.wikipedia.org/wiki/CAF_Champions_League'>CAF Champions League</a> - <span>3 Times</span></li>
-        <li><a href='https://en.wikipedia.org/wiki/CAF_Confederation_Cup'>CAF Confederation Cup</a> - <span>3 Times</span></li>
-        <li><a href='https://en.wikipedia.org/wiki/CAF_Super_Cup'>CAF Super Cup</a> - <span>3 Times</span></li>
-        <li><a href='https://en.wikipedia.org/wiki/Arab_Club_Champions_Cup'>Arab Club Champions Cup</a> - <span>2 Time</span></li>
-        <li><a href='https://en.wikipedia.org/wiki/UNAF_Club_Cup'>North African Club Cup</a> - <span>1 Time</span></li>
-        <li><a href='https://en.wikipedia.org/wiki/Afro-Asian_Club_Championship'>Afro-Asian Club Championship</a> - <span>1 Time</span></li>
-        <li><a href='https://en.wikipedia.org/wiki/FIFA_Club_World_Cup'>FIFA Club World Cup</a> - <span>Runners up (2013)</span></li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/Botola">Botola</a> -
+          <span>13 Times</span>
+        </li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/Moroccan_Throne_Cup"
+            >Moroccan Throne Cup</a
+          >
+          - <span>8 Times</span>
+        </li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/CAF_Champions_League"
+            >CAF Champions League</a
+          >
+          - <span>3 Times</span>
+        </li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/CAF_Confederation_Cup"
+            >CAF Confederation Cup</a
+          >
+          - <span>3 Times</span>
+        </li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/CAF_Super_Cup"
+            >CAF Super Cup</a
+          >
+          - <span>3 Times</span>
+        </li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/Arab_Club_Champions_Cup"
+            >Arab Club Champions Cup</a
+          >
+          - <span>2 Time</span>
+        </li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/UNAF_Club_Cup"
+            >North African Club Cup</a
+          >
+          - <span>1 Time</span>
+        </li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/Afro-Asian_Club_Championship"
+            >Afro-Asian Club Championship</a
+          >
+          - <span>1 Time</span>
+        </li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/FIFA_Club_World_Cup"
+            >FIFA Club World Cup</a
+          >
+          - <span>Runners up (2013)</span>
+        </li>
       </ul>
     </section>
-    </header>
   </body>
 </html>
