--- a/CSS Penguin/index.html
+++ b/CSS Penguin/index.html
@@ -6,5 +6,9 @@
     <title>Penguin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body></body>
+
+  <body>
+    <div class="penguin"></div>
+    <div class="ground"></div>
+  </body>
 </html>
