--- a/CSS Penguin/index.html
+++ b/CSS Penguin/index.html
@@ -16,6 +16,12 @@
         <div class="face left"></div>
         <div class="face right"></div>
         <div class="chin"></div>
+        <div class="eye left">
+          <div class="eye-lid"></div>
+        </div>
+        <div class="eye right">
+          <div class="eye-lid"></div>
+        </div>
       </div>
       <div class="penguin-body"></div>
     </div>
