--- a/Personal Portfolio WebPage/index.html
+++ b/Personal Portfolio WebPage/index.html
@@ -1,9 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>WALID DRAÂ Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body></body>
-</html>
+<DOCTYPE html>
+  <html lang='en'>
+    <head>
+      <meta charset='UTF-8'/>
+      <title>WALID DRAÂ Portfolio</title>
+      <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
+      <link rel='stylesheet' href='styles.css'>
+    </head>
+    <body>
+      <nav id='navbar'>
+        <h3>WALID DRAÂ</h3>
+        <p><a href='#welcome-section'>Summary</a></p>
+        <p><a href='#projects'>Projects</a><p>
+        </ul>
+      </nav>
+      <section id='welcome-section'>
+        <h1>Welcome to WALID DRAÂ's Portfolio</h1>
+        <a href='https://github.com/wa1ead' target='_blank' id='profile-link'>GitHub profile</a>
+      </section>
+      <section id='projects'>
+        <ul>
+          <h1>Projects</h1>
+          <li class='project-tile'><a href='https://github.com/wa1ead/UltimateReactCourse'>UltimateReactCourse</a></li>
+        </ul>
+      </section>
+    </body>
+  </html>
